# DigiTemp

./: .gitignore  README.md
arduino_libs/epd2in9/: DialogInput_bold_16.h  epd2in9.cpp  epdif.h  epdpaint.cpp  epdpaint.h
dt-tx/: CMakeLists.txt  dt_tx.ino
eink-client/: CMakeLists.txt  eink_client.ino
eink-client/epd2in9/: epd2in9.ino  epdpaint.cpp  epdpaint.h
eink-weather-disp/: CMakeLists.txt  eink_weather_disp.ino
weather_symbols/: .gitignore  export_to_bin.py
